# medical-deidentification

./: .coveragerc  .editorconfig  .env.example  .gitignore  ARCHITECTURE_FIX_STRATEGY_TYPE.md  CHAIN_DIAGNOSIS.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  GPU_CONFIGURATION.md  LICENSE  LLM_ARCHITECTURE_DIAGRAM.txt  OLLAMA_CONNECTION_GUIDE.md  OLLAMA_INTEGRATION.md  OLLAMA_NOT_INSTALLED.md  OLLAMA_SETUP_GUIDE.md  PACKAGE_VERSIONS.md  PHI_BATCH_SUMMARY.md  PROJECT_STATUS.md  RAG_MULTIPLE_PHI_CHECK.md  README.md  README.md.bak  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  TEST_ENGINE_QUICK.md  VERIFICATION_REPORT.md  analyze_unused_packages.py  current_packages.txt  package-lock.json  package.json  phi_identification_results.xlsx  phi_ollama_output.txt  phi_test_output.txt  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.old  result_e7649281.xlsx  (+18 more)
.claude/skills/changelog-updater/: SKILL.md
.claude/skills/code-refactor/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/ddd-architect/: SKILL.md
.claude/skills/frontend-ddd/: SKILL.md
.github/: copilot-instructions.md
.github/bylaws/: ddd-architecture.md  frontend-ddd.md  git-workflow.md  memory-bank.md  python-environment.md
.github/workflows/: ci.yml
core/: __init__.py
core/domain/: __init__.py  aggregates.py  configs.py  entities.py  loader_models.py  masking_types.py  phi_identification_models.py  phi_type_mapper.py  phi_type_registry.py  phi_types.py  value_objects.py
core/infrastructure/: __init__.py
core/interface/: __init__.py
data/benchmark/: evaluation_report.json  evaluation_report_qwen.json  presidio_synthetic.jsonl  sample_test.json
data/output/: benchmark_llm_results.json  benchmark_results.json  benchmark_structured_results.json
data/raw/: .gitkeep
data/regulations/: .gitkeep
data/test/: .gitkeep
deploy/reverse-proxy/: Caddyfile.example  nginx-medical-deid.conf.example
docs/: ARCHITECTURE.md  DEID_REPO_LANDSCAPE_REVIEW.md  DEPLOYMENT.md  FORMAT_PRESERVATION.md  RAG_USAGE_GUIDE.md  RELEASE_GUIDE.md  batch-processing.md  benchmark-plan.md  dspy-yaml-prompts.md  llm-benchmark-results-2025.md  llm-benchmark-results.md  llm-optimization-strategy.md  llm-phi-benchmark-report.md  python312-optimization.md  rag-usage.md
examples/: README.md  batch_example.py  batch_processing_low_level.py  deidentification_engine_example.py  dspy_optimization.py  engine_integration_test.py  loader_usage_examples.py  processing_engine_examples.py  quick_start.py  rag_usage_examples.py  simple_batch_test.py  streaming_phi_example.py  structured_output_demo.py
examples/_archived/: batch_processing_low_level.py  deidentification_engine_example.py  loader_usage_examples.py  simple_batch_test.py  streaming_phi_example.py
medical_deidentification/: __init__.py
medical_deidentification/application/: __init__.py
medical_deidentification/domain/: __init__.py  aggregates.py  entities.py  masking_types.py  models.py  phi_identification_models.py  value_objects.py
medical_deidentification/infrastructure/: __init__.py
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
regulations/source_documents/: hipaa_phi_definition.md  hipaa_safe_harbor.md  taiwan_pdpa.md
regulations/vectorstore/: index.faiss  index.pkl
scripts/: README.md  benchmark_lightweight_llms.py  check_dependencies.py  check_workflow.py  compare_phi_models.py  debug_phi_mismatch.py  dspy_phi_optimizer.py  evaluate_dspy_phi.py  evaluate_langchain_mapreduce.py  evaluate_langchain_phi.py  evaluate_minimind_phi.py  evaluate_public_dataset.py  generate_test_data_excel.py  install_dependencies.py  phi_evaluator.py  prepare_public_phi_data.py  start-web.sh  test_basic_functionality.py  test_chain_debug.py  test_domain_models.py  test_imports.py  test_model_setup.py  test_single_file_phi.py  test_single_file_phi_quick.py  test_streaming_chain_integration.py  typecheck.sh
scripts/benchmark/: __init__.py  data_loader.py  evaluator.py  llm_benchmark.py  llm_benchmark_v2.py  metrics.py  optimized_evaluator.py  presidio_integration.py
scripts/generators/: generate_test_data_complex_phi.py  generate_test_data_excel.py  generate_test_data_with_phi_tags.py  phi_tag_parser.py
scripts/services/: backup-runtime-state.sh  configure-lan-access.sh  configure-production-proxy.sh  frontend-server.mjs  install-services.sh  medical-deid-backend.service  medical-deid-frontend.service  restore-runtime-state.sh  run-frontend.sh  uninstall-services.sh
tests/: conftest.py  mvp_step2_phi_identified.txt  mvp_step3_deidentified.txt  output_step1.txt  output_step1_error.txt  output_step2.txt  output_step3_complete.txt  output_step3_deidentified.txt
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_llm.py  test_minimind.py  test_minimind_quick.py
tests/unit/: __init__.py  test_benchmark.py  test_core_progress_callbacks.py  test_domain_models.py  test_extended_phi_types.py  test_phi_detection_hardening.py  test_phi_tools.py  test_safe_paths.py  test_streaming_chain.py  test_streaming_import.py  test_web_privacy_session.py
web/: README.md  spec.md
web/backend/: IMPROVEMENTS.md  README.md  REFACTORING_PLAN.md  config.py  logging_config.py  main.py  main_legacy.py  pyproject.toml  security.py
web/backend/api/: __init__.py  auth.py  cleanup.py  files.py  health.py  llm.py  logs.py  preview.py  processing.py  results.py  settings.py
web/backend/data/: tasks_db.json
web/backend/data/phi_configs/presets/: hipaa_standard.json  minimal.json  research_safe.json
web/backend/models/: __init__.py  auth.py  config.py  file.py  regulation.py  task.py
web/backend/services/: __init__.py  auth_service.py  error_safety.py  file_service.py  llm_config_service.py  phi_config_service.py  processing_service.py  regulation_service.py  result_sanitizer.py  task_service.py
web/backend/utils/: safe_paths.py
web/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+259 files in other folders)
