[tool.poetry]
name = "medical-deidentification"
version = "0.1.0-beta"
description = "LLM-powered medical text de-identification toolkit with RAG-enhanced regulation retrieval | 基於 LLM 與 RAG 的醫療文本去識別化工具套件"
authors = ["Medical De-identification Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/YOUR_USERNAME/medical-deidentification"
repository = "https://github.com/YOUR_USERNAME/medical-deidentification"
keywords = ["medical", "deidentification", "phi", "hipaa", "nlp", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
# LLM Integration | LLM 整合
langchain = "^0.1.0"
langchain-community = "^0.0.10"
openai = "^1.12.0"
anthropic = "^0.18.0"

# RAG & Vector Store | RAG 與向量儲存
chromadb = "^0.4.22"
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"

# Data Processing | 資料處理
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# NLP | 自然語言處理
spacy = "^3.7.2"

# CLI & UI | 命令列介面與使用者介面
typer = "^0.9.0"
rich = "^13.7.0"
tqdm = "^4.66.1"

# I/O & Data Formats | 輸入輸出與資料格式
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"

# Utilities | 工具
tenacity = "^8.2.3"  # Retry logic | 重試邏輯
loguru = "^0.7.2"    # Logging | 日誌

[tool.poetry.group.dev.dependencies]
# Testing | 測試
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"

# Code Quality | 程式碼品質
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
ruff = "^0.2.1"

# Documentation | 文件
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Development Tools | 開發工具
ipython = "^8.21.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
med-deid = "medical_deidentification.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black Configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

# isort Configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

# mypy Configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=medical_deidentification",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["medical_deidentification"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Ruff Configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]
