# ============================================================
# pyproject.toml - Medical De-identification Project
# 使用 uv 套件管理器 (https://github.com/astral-sh/uv)
# ============================================================

[project]
name = "medical-deidentification"
version = "0.1.0-beta"
description = "LLM-powered medical text de-identification toolkit with RAG-enhanced regulation retrieval | 基於 LLM 與 RAG 的醫療文本去識別化工具套件"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "u9401066", email = "u9401066@gap.kmu.edu.tw" }
]
keywords = ["medical", "deidentification", "phi", "hipaa", "nlp", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# === 正式依賴 (精簡版) ===
dependencies = [
    # Core LLM | 核心 LLM（僅 Ollama 本地推理）
    "langchain-core>=1.0.0",
    "langchain-ollama>=1.0.0",
    # DSPy | 自動 Prompt 優化
    "dspy>=2.5.0",
    # RAG (可選，如需 RAG 功能)
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.1",
    # Data Processing | 資料處理
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # I/O | 輸入輸出
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    # Utilities | 工具
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    # Template | 模板引擎
    "jinja2>=3.1.0",
    "presidio-evaluator>=0.2.5",
    "spacy>=3.8.11",
    "langchain-huggingface>=1.2.0",
    "langchain-community>=0.4.1",
]

# === 可選依賴 ===
[project.optional-dependencies]
# 雲端 LLM 支援
cloud = [
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.74.0",
]

# 完整 RAG 功能（含 HuggingFace）
rag = [
    "langchain-huggingface>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]

# 開發依賴
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

# === 入口點（CLI 工具）===
[project.scripts]
med-deid = "core.cli:app"

[project.urls]
Homepage = "https://github.com/u9401066/medical-deidentification"
Repository = "https://github.com/u9401066/medical-deidentification"
Documentation = "https://github.com/u9401066/medical-deidentification#readme"

# === 建置系統 ===
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

# ============================================================
# 工具配置
# ============================================================

# === uv 配置 ===
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.5",
]

# === Ruff (Linter + Formatter，取代 black/isort/flake8/pylint) ===
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "S",      # flake8-bandit (security)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "S101",    # assert used (OK in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"scripts/**/*.py" = ["S101", "T201"]  # allow print in scripts

# === ty (Type Checker - Astral, 超快！) ===
# ty 是 Astral 團隊（uv/ruff 作者）的新型別檢查器
# 速度：比 mypy 快 ~250 倍
# 使用：ty check
[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# 選用依賴使用 lazy import 模式，降級為警告
unresolved-import = "warn"

# === MyPy (Type Checker - 備用) ===
# 保留 mypy 配置作為參考，但建議使用 ty
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "faiss",
    "faiss.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
    "langchain",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "langchain_huggingface.*",
]
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--cov=core",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
    "e2e: End-to-end tests (require running application)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# === Coverage ===
[tool.coverage.run]
source = ["core"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 60
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# === Bandit (Security Scanner) ===
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert used (OK in production for this project)
