# ============================================================
# Medical De-identification Web Backend
# 使用 uv 套件管理器
# ============================================================

[project]
name = "medical-deidentification-web"
version = "1.0.0"
description = "Medical De-identification Web API Backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "u9401066", email = "u9401066@gap.kmu.edu.tw" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    
    # Data Processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    
    # Utilities
    "loguru>=0.7.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",  # For testing FastAPI
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# === uv 配置 ===
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
